--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,106 +1,105 @@
 /* ------------------  Global Styling ------------------ */
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap');
-
-
 :root {
-    --shaddow:0 4px 6px -1px rgba(0,0,0,0.1),0 2px 4px -1px rgba(0,0,0,0.06);
-  }
+    --shaddow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+}
 
-body{
-    background-color: rgba(232,233,239,1);
+body {
+    background-color: rgba(232, 233, 239, 1);
     font-family: 'Roboto', sans-serif;
 }
 
 
 /* ------------------  Register Page ------------------ */
 
-#form-container{
+#form-container {
     width: 400px;
-    box-shadow:var(--shaddow);
+    box-shadow: var(--shaddow);
     background-color: #fff;
     padding: 30px;
     border-radius: 5px;
     position: fixed;
-    top:50%;
-    left:50%;
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
 }
 
-#logo{
+#logo {
     display: block;
     width: 100px;
     margin: 0 auto;
 }
 
-#welcome-message{
+#welcome-message {
     text-align: center;
     margin-bottom: 20px;
 }
 
-#welcome-message h1{
+#welcome-message h1 {
     font-size: 36px;
 }
 
-
-#welcome-message p{
+#welcome-message p {
     font-size: 16px;
     color: rgb(97, 98, 105);
     font-weight: 300;
 }
 
-.form-field{
+.form-field {
     margin-bottom: 20px;
 }
 
-.form-field label{
+.form-field label {
     font-size: 16px;
     line-height: 1.7em;
 }
 
-.form-field input{
+.form-field input {
     width: 100%;
-    border:2px solid rgba(198,202,219,1);
+    border: 2px solid rgba(198, 202, 219, 1);
     border-radius: 5px;
     padding: 10px;
     font-size: 16px;
     box-sizing: border-box;
+    transition: background-color .5s;
 }
 
-.form-field input[type='submit']{
+.form-field input[type='submit'] {
     background-color: rgb(75, 93, 172);
-    border:none;
+    border: none;
     color: #fff;
+    cursor: pointer;
 }
-
-
+.form-field input[type='submit']:hover{
+    background-color: rgb(52, 76, 182);
+}
 @media screen and (max-width:450px) {
-    #form-container{
+    #form-container {
         width: 95%;
-
     }
-
-    #welcome-message h1{
+    #welcome-message h1 {
         font-size: 24px;
     }
-    
 }
 
 
 /* ----------------- Room Styling ------------------*/
-#room-name-wrapper{
+
+#room-name-wrapper {
     text-align: center;
     font-size: 18px;
 }
 
-#video-streams{
+#video-streams {
     display: flex;
     flex-wrap: wrap;
     height: 85vh;
     width: 95%;
-    margin:0 auto;
+    margin: 0 auto;
 }
 
-.video-container{
+.video-container {
     flex-basis: 500px;
     flex-grow: 1;
     max-height: 100%;
@@ -108,25 +107,25 @@ body{
     border: 1px solid rgb(75, 93, 172);
     border-radius: 5px;
     margin: 2px;
-    background-color: rgba(198,202,219,1);
+    background-color: rgba(198, 202, 219, 1);
     position: relative;
 }
 
-.video-player{
+.video-player {
     height: 100%;
     width: 100%;
 }
 
-.video-player > * {
+.video-player>* {
     border-radius: 5px;
 }
 
-.username-wrapper{
+.username-wrapper {
     position: absolute;
     top: 10px;
     left: 10px;
     z-index: 9999;
-    background-color: rgba(0,0,0,0.3);
+    background-color: rgba(0, 0, 0, 0.3);
     width: fit-content;
     padding: 10px;
     border-radius: 5px;
@@ -135,7 +134,7 @@ body{
 }
 
 @media screen and (max-width:1650px) {
-    .video-container{
+    .video-container {
         flex-basis: 300px;
         min-height: 200px;
     }
@@ -144,7 +143,7 @@ body{
 
 /* ----------------- Room Styling | Controls ------------------*/
 
-#controls-wrapper{
+#controls-wrapper {
     display: flex;
     width: 100%;
     justify-content: center;
@@ -153,7 +152,7 @@ body{
     bottom: 20px;
 }
 
-.control-icon{
+.control-icon {
     height: 20px;
     width: 20px;
     box-shadow: var(--shaddow);
@@ -161,9 +160,8 @@ body{
     cursor: pointer;
     padding: 10px;
     border-radius: 5px;
-
 }
 
-#leave-btn{
+#leave-btn {
     background-color: rgb(255, 80, 80, 1);
 }
