--- a/templates/base/dylan.html
+++ b/templates/base/dylan.html
@@ -6,11 +6,48 @@
         <section id="form-container">
             <img id="logo" src="{% static 'images/chat-icon.png' %}" alt="">
 
-            <div>
+            <div id="welcome-message">
                 <h1>Welcome to Meeco</h1>
                 <p>The application of Anako-Consulting meetings</p>
             </div>
+
+            <form id="form">
+                <div class="form-field">
+                    <input type="text" name="room" placeholder="Enter a room name...">
+                </div>
+
+                <div class="form-field">
+                    <input type="text" name="username" placeholder="Enter your username">
+                </div>
+
+                <div class="form-field">
+                    <input type="submit" value="Join meeting">
+                </div>
+            </form>
         </section>
     </main>
+
+    <script>
+        let form = document.querySelector("#form")
+
+        form.onsubmit = async (e) => {
+            e.preventDefault()
+            let room = e.target.room.value
+            let name = e.target.username.value
+
+            let response = await fetch(`/get_token/?channel=${room}`)
+            let data = await response.json()
+
+            let UID = data.uid
+            let token = data.token
+
+            sessionStorage.setItem('UID', UID)
+            sessionStorage.setItem('token', token)
+            sessionStorage.setItem('room', room)
+            sessionStorage.setItem('name', name)
+
+            window.open('/room/', '_self')
+        }
+    </script>
 
 {% endblock content %}
