--- a/templates/base/room.html
+++ b/templates/base/room.html
@@ -5,19 +5,26 @@
     <main>
 
         <section id="room-name-wrapper">
-            <p>Room Name: <span id="room-name">NEWYEAR</span></p>
+            <p>Room Name: <span id="room-name"></span></p>
         </section>
 
-        <section id="video-streams">
-            <div class="video-container" id="user-container-1">
-                <div class="username-wrapper">
-                    <span class="user-name">Dylan</span>
-                </div>
-                <div class="video-player" id="user-1"></div>
+        <section id="video-streams"></section>
+
+        <section id="controls-wrapper">
+            <div class="icon-wrapper">
+                <img class="control-icon" id="mic-btn" src="{% static 'images/microphone.svg' %}" alt="">
+            </div>
+
+            <div class="icon-wrapper">
+                <img class="control-icon" id="camera-btn" src="{% static 'images/video.svg' %}" alt="">
+            </div>
+
+            <div class="icon-wrapper">
+                <img class="control-icon" id="leave-btn" src="{% static 'images/leave.svg' %}" alt="">
             </div>
         </section>
 
     </main>
     <script src="{% static 'assets/AgoraRTC_N-4.10.1.js' %}"></script>
-<script src="{% static 'js/stream.js' %}"></script>
+    <script src="{% static 'js/stream.js' %}"></script>
 {% endblock content %}
