change app description

--- a/templates/base/dylan.html
+++ b/templates/base/dylan.html
@@ -8,7 +8,7 @@
 
             <div id="welcome-message">
                 <h1>Welcome to Meeco</h1>
-                <p>The application of Anako-Consulting meetings</p>
+                <p>The application of SUDO-CORP meetings</p>
             </div>
 
             <form id="form">
